--- a/scss/main/_cards.scss
+++ b/scss/main/_cards.scss
@@ -1,87 +1,5 @@
 .card{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 19.2%;
-    height: 100%;
-    background: #252525;
-    transition: transform 0.6s 0.7s, width 0.7s, opacity 0.6s 0.7s,
-        z-index 0s 1.3s;
-    will-change: transform, width, opacity;
-    &:not(.caixa-conteudo-ativo){
-        cursor: pointer;
-    }
-    >.componente-interno{ // componente-sem-rolagem
-        overflow: hidden;
-        position: relative;
-        height: 100%;
-        >.componente{ //componente-interno
-            overflow: hidden;
-            position: relative;
-            height: 100%;
-            transition: transform 1s;
-            transform: translate3d(0, 100%, 0);
-        }
-    }
-    .componente-fondo-imagen{
-        position: relative;
-        height: 100%;
-        transition: transform 0.6s 0.7s;
-        will-change: transform;
-        &::before{
-            content: "";
-            position: absolute;
-            left: 0;
-            top: -5%;
-            width: 100%;
-            height: 110%;
-            background-size: cover;
-            background-position: center center;
-            transition: transform 1s;
-            transform: translate3d(0, 0, 0) scale(1);
-        }
-        &::after{
-            content: "";
-            z-index: 1;
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            opacity: 0;
-            transition: opacity 0.5s;
-        }
-    }
-    .componente-visual-inicial {
-        z-index: 2;
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        padding-bottom: 2rem;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        transition: all 0.3s 1.2s;
-        >strong{
-            color: $parrafos;
-            text-transform: uppercase;
-            font-size: 2rem;
-        }
-      }
-    .body{ // Esto es igual a componente-content
-        z-index: -1;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        padding: 30px;
-        opacity: 0;
-        pointer-events: none;
-        transition: all 0.1s;
+    background: lighten($fondo, 10%);
         >button{
             margin:12px; 
             background-color: transparent;
@@ -176,69 +94,6 @@
             }
         }
     }
-    .componente-index{
-        overflow: hidden;
-        position: absolute;
-        left: 0;
-        top: 0px;
-        width: 100%;
-        height: 100%;
-        min-height: 250px;
-        text-align: center;
-        font-size: 20vw;
-        line-height: 0.85;
-        font-weight: bold;
-        transition: transform 0.5s, opacity 0.3s 1.4s;
-        transform: translate3d(0, 1vw, 0);
-        .componente-index-back,.componente-index-front {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-        }
-        .componente-index-back{
-            color: #2f3840;
-            opacity: 0;
-            transition: opacity 0.25s 0.25s;
-        }
-        .componente-index-front{
-            .componente-index-overlay{
-                overflow: hidden;
-                position: relative;
-                transform: translate3d(0, 100%, 0);
-                transition: transform 0.5s 0.1s;
-                color: transparent;
-                &::before{
-                    content: attr(data-index);
-                    position: absolute;
-                    left: 0;
-                    bottom: 0;
-                    width: 100%;
-                    height: 100%;
-                    color: #fff;
-                    transform: translate3d(0, -100%, 0);
-                    transition: transform 0.5s 0.1s;
-                }
-            }
-        }
-    }
-    &:hover{
-        .componente-index{
-            transform: translate3d(0,0,0);
-            .componente-index-back{
-                transition: opacity 0.25s;
-                opacity: 1;
-            }
-            .componente-index-front{
-                .componente-index-overlay{
-                    transform: translate3d(0,0,0);
-                    &::before{
-                        transform: translate3d(0,0,0);
-                    }
-                }
-            }
-        }
-    }
-}
+
 
     
