Se termino la animacion de javascript de las cartas de los proyectos

--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Roboto+Flex:opsz,wght@8..144,700&display=swap');
-$fondo : #0B0217;
+$fondo-cartas : #0b0217be;
+$fondo:#0B0217;
 $fondo-offcanvas:#1E0B38;
 $colores:#9D86DF,#7563AA;
 $parrafos:#F1E7FF;
