--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ ul {
   list-style-type: none;
 }
 
+hr {
+  background-color: #F1E7FF;
+}
+
 header nav {
   padding: 12px;
   display: flex;
@@ -170,10 +174,7 @@ main section:nth-child(3) h2 hr {
   margin: auto 32px;
   display: inline-block;
 }
-main section:nth-child(3) .card {
-  background: #210646;
-}
-main section:nth-child(3) .card > button {
+main section:nth-child(3) .card > button:first-child {
   margin: 12px;
   background-color: transparent;
   border: 2px solid #F1E7FF;
@@ -182,7 +183,7 @@ main section:nth-child(3) .card > button {
   display: inline-block;
   width: fit-content;
 }
-main section:nth-child(3) .card > button span {
+main section:nth-child(3) .card > button:first-child span {
   display: inline-block;
   padding: 6px;
   font-size: 1.2rem;
@@ -285,7 +286,7 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
   top: 0;
   width: 19.2%;
   height: 100%;
-  background: #252525;
+  background: #0B0217;
   transition: transform 0.6s 0.7s, width 0.7s, opacity 0.6s 0.7s, z-index 0s 1.3s;
   will-change: transform, width, opacity;
 }
@@ -352,7 +353,7 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(28, 1, 51, 0.7);
   opacity: 0;
   transition: opacity 0.5s;
 }
@@ -431,16 +432,7 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
   transition: all 0s 0.45s;
   cursor: pointer;
 }
-
-.componente.caixa-conteudo-ativo .componente-botao-fechar {
-  z-index: 5;
-  opacity: 1;
-  pointer-events: auto;
-  transition: all 0s 1.4s;
-}
-
-.componente-botao-fechar:before,
-.componente-botao-fechar:after {
+.componente-botao-fechar::after, .componente-botao-fechar::before {
   content: "";
   position: absolute;
   left: 0;
@@ -451,6 +443,13 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
   background: #fff;
   opacity: 0;
   transition: opacity 0s;
+}
+
+.componente.caixa-conteudo-ativo .componente-botao-fechar {
+  z-index: 5;
+  opacity: 1;
+  pointer-events: auto;
+  transition: all 0s 1.4s;
 }
 
 /*-------------------*/
@@ -550,7 +549,7 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
   transform: translate3d(0, 0, 0);
 }
 
-.conteudo-geral.caixa--componente-ativo .componente:nth-child(2):not(.caixa-conteudo-ativo) {
+.conteudo-geral.caixa--componente-ativo .componente:nth-child(1):not(.caixa-conteudo-ativo) {
   transform: scale(0.5) translate3d(105.2083333333%, 0, 0);
   opacity: 0;
   transition: transform 0.95s, opacity 0.95s;
@@ -577,14 +576,14 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
   transform: translate3d(105.2083333333%, 0, 0);
 }
 .componente:nth-child(2) .componente-interno {
-  transition-delay: 1s;
+  transition-delay: 0.1s;
 }
 .componente:nth-child(2) .componente-fundo-imagem::before {
-  transition-delay: 1s;
+  transition-delay: 0.1s;
   background-image: url("../multimedia/LandingQualityDestkop.png");
 }
 
-.conteudo-geral.caixa--componente-ativo .componente:nth-child(2):not(.caixa-conteudo-ativo) {
+.conteudo-geral.caixa--componente-ativo .componente:nth-child(3):not(.caixa-conteudo-ativo) {
   transform: scale(0.5) translate3d(105.2083333333%, 0, 0);
   opacity: 0;
   transition: transform 0.95s, opacity 0.95s;
@@ -594,14 +593,14 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
   transform: translate3d(210.4166666667%, 0, 0);
 }
 .componente:nth-child(3) .componente-interno {
-  transition-delay: 2s;
+  transition-delay: 0.2s;
 }
 .componente:nth-child(3) .componente-fundo-imagem::before {
-  transition-delay: 2s;
+  transition-delay: 0.2s;
   background-image: url("../multimedia/LandingQualityDestkopx.png");
 }
 
-.conteudo-geral.caixa--componente-ativo .componente:nth-child(2):not(.caixa-conteudo-ativo) {
+.conteudo-geral.caixa--componente-ativo .componente:nth-child(4):not(.caixa-conteudo-ativo) {
   transform: scale(0.5) translate3d(105.2083333333%, 0, 0);
   opacity: 0;
   transition: transform 0.95s, opacity 0.95s;
@@ -611,14 +610,14 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
   transform: translate3d(315.625%, 0, 0);
 }
 .componente:nth-child(4) .componente-interno {
-  transition-delay: 3s;
+  transition-delay: 0.3s;
 }
 .componente:nth-child(4) .componente-fundo-imagem::before {
-  transition-delay: 3s;
+  transition-delay: 0.3s;
   background-image: url("../multimedia/Freaks3DPersoDestkop.png");
 }
 
-.conteudo-geral.caixa--componente-ativo .componente:nth-child(2):not(.caixa-conteudo-ativo) {
+.conteudo-geral.caixa--componente-ativo .componente:nth-child(5):not(.caixa-conteudo-ativo) {
   transform: scale(0.5) translate3d(105.2083333333%, 0, 0);
   opacity: 0;
   transition: transform 0.95s, opacity 0.95s;
@@ -628,10 +627,10 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
   transform: translate3d(420.8333333333%, 0, 0);
 }
 .componente:nth-child(5) .componente-interno {
-  transition-delay: 4s;
+  transition-delay: 0.4s;
 }
 .componente:nth-child(5) .componente-fundo-imagem::before {
-  transition-delay: 4s;
+  transition-delay: 0.4s;
   background-image: url("../multimedia/Freaks3DPersoDestkop.png");
 }
 
@@ -650,6 +649,35 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
 .componente.caixa-conteudo-ativo .componente-fundo-imagem:before {
   transition-delay: 0.6s;
   transform: scale(1.1);
+}
+
+aside {
+  position: fixed;
+  top: 156px;
+  right: 64px;
+  bottom: 300px;
+}
+aside nav ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+aside nav ul li {
+  text-align: center;
+  margin: 12px auto;
+}
+aside nav ul li a {
+  font-size: 28px;
+  color: #eddfff;
+}
+aside nav ul li hr {
+  position: relative;
+  top: 12px;
+  height: 300px;
+  margin: 2px auto;
+  display: inline-block;
+  color: #eddfff;
+  background-color: #eddfff;
 }
 
 /*# sourceMappingURL=style.css.map */
