--- a/scss/main/_cards.scss
+++ b/scss/main/_cards.scss
@@ -1,6 +1,5 @@
 .card{
-    background: lighten($fondo, 10%);
-        >button{
+        >button:first-child{
             margin:12px; 
             background-color: transparent;
             border: 2px solid $parrafos;
