--- a/scss/main/_projects.scss
+++ b/scss/main/_projects.scss
@@ -18,7 +18,7 @@
     top: 0;
     width: 19.2%;
     height: 100%;
-    background: #252525;
+    background: $fondo;
     transition: transform 0.6s 0.7s, width 0.7s, opacity 0.6s 0.7s,
       z-index 0s 1.3s;
     will-change: transform, width, opacity;
@@ -80,7 +80,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(28, 1, 51, 0.7);
     opacity: 0;
     transition: opacity 0.5s;
   }
@@ -149,25 +149,24 @@
     pointer-events: none;
     transition: all 0s 0.45s;
     cursor: pointer;
+    &::after,&::before{
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 50%;
+      width: 100%;
+      height: 8px;
+      margin-top: -4px;
+      background: #fff;
+      opacity: 0;
+      transition: opacity 0s;
+    }
   }
   .componente.caixa-conteudo-ativo .componente-botao-fechar {
     z-index: 5;
     opacity: 1;
     pointer-events: auto;
     transition: all 0s 1.4s;
-  }
-  .componente-botao-fechar:before,
-  .componente-botao-fechar:after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 50%;
-    width: 100%;
-    height: 8px;
-    margin-top: -4px;
-    background: #fff;
-    opacity: 0;
-    transition: opacity 0s;
   }
   /*-------------------*/
   .componente.caixa-conteudo-ativo .componente-botao-fechar:before,
