--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,19 @@ hr {
   background-color: #F1E7FF;
 }
 
+.agradecimiento {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  margin: 156px auto;
+}
+.agradecimiento img {
+  width: 35%;
+  margin-top: 32px;
+}
+
 header nav {
   padding: 12px;
   display: flex;
@@ -272,7 +285,7 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
   position: absolute;
   left: 0;
   top: 0;
-  width: 19.2%;
+  width: 30.2%;
   height: 100%;
   background: #0B0217;
   transition: transform 0.6s 0.7s, width 0.7s, opacity 0.6s 0.7s, z-index 0s 1.3s;
@@ -304,6 +317,7 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
   position: relative;
   height: 100%;
   transition: transform 0.6s 0.7s;
+  opacity: 0.5;
   will-change: transform;
 }
 
@@ -530,7 +544,7 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
 }
 
 .conteudo-geral.caixa--componente-ativo .componente:nth-child(1):not(.caixa-conteudo-ativo) {
-  transform: scale(0.5) translate3d(105.2083333333%, 0, 0);
+  transform: scale(0.5) translate3d(0%, 0, 0);
   opacity: 0;
   transition: transform 0.95s, opacity 0.95s;
 }
@@ -564,7 +578,7 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
 }
 
 .conteudo-geral.caixa--componente-ativo .componente:nth-child(3):not(.caixa-conteudo-ativo) {
-  transform: scale(0.5) translate3d(105.2083333333%, 0, 0);
+  transform: scale(0.5) translate3d(210.4166666667%, 0, 0);
   opacity: 0;
   transition: transform 0.95s, opacity 0.95s;
 }
@@ -578,40 +592,6 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
 .componente:nth-child(3) .componente-fundo-imagem::before {
   transition-delay: 0.2s;
   background-image: url("../multimedia/LandingQualityDestkopx.png");
-}
-
-.conteudo-geral.caixa--componente-ativo .componente:nth-child(4):not(.caixa-conteudo-ativo) {
-  transform: scale(0.5) translate3d(105.2083333333%, 0, 0);
-  opacity: 0;
-  transition: transform 0.95s, opacity 0.95s;
-}
-
-.componente:nth-child(4) {
-  transform: translate3d(315.625%, 0, 0);
-}
-.componente:nth-child(4) .componente-interno {
-  transition-delay: 0.3s;
-}
-.componente:nth-child(4) .componente-fundo-imagem::before {
-  transition-delay: 0.3s;
-  background-image: url("../multimedia/Freaks3DPersoDestkop.png");
-}
-
-.conteudo-geral.caixa--componente-ativo .componente:nth-child(5):not(.caixa-conteudo-ativo) {
-  transform: scale(0.5) translate3d(105.2083333333%, 0, 0);
-  opacity: 0;
-  transition: transform 0.95s, opacity 0.95s;
-}
-
-.componente:nth-child(5) {
-  transform: translate3d(420.8333333333%, 0, 0);
-}
-.componente:nth-child(5) .componente-interno {
-  transition-delay: 0.4s;
-}
-.componente:nth-child(5) .componente-fundo-imagem::before {
-  transition-delay: 0.4s;
-  background-image: url("../multimedia/Freaks3DPersoDestkop.png");
 }
 
 .componente.caixa-conteudo-ativo {
