--- a/scss/main/_projects.scss
+++ b/scss/main/_projects.scss
@@ -16,11 +16,11 @@
     position: absolute;
     left: 0;
     top: 0;
-    width: 19.2%;
+    width: 30.2%;
     height: 100%;
     background: $fondo;
     transition: transform 0.6s 0.7s, width 0.7s, opacity 0.6s 0.7s,
-      z-index 0s 1.3s;
+    z-index 0s 1.3s;
     will-change: transform, width, opacity;
   }
   .componente:not(.caixa-conteudo-ativo) {
@@ -44,6 +44,7 @@
     position: relative;
     height: 100%;
     transition: transform 0.6s 0.7s;
+    opacity: .5;
     will-change: transform;
   }
   
