--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,7 +43,7 @@ ul{
 hr{
     background-color: $parrafos
 }
-
+@import "main/consulta";
 @import "main/header";
 @import "main/main";
 @import "main/projects";
