--- a/scss/main/_footer.scss
+++ b/scss/main/_footer.scss
@@ -38,6 +38,9 @@ footer{
                 width: 600px;
                 height: 300px;
                 resize: none;
+                @media only screen and (max-width:415px){
+                    width: 300px;
+                }
             }
         }
     }
